apps/wallet/src/ui/app/components/receipt-card/ReceiptCard.module.scss
@use '_utils';
@use '_values/colors';

.walletaddress {
    a {
        color: colors.$sui-dark-blue;
        @include utils.typography('mono-type');
    }
}

.txn-response {
    display: block;
    position: relative;
    width: 100%;

    .txn-response-status {
        display: flex;
        flex-flow: column;
        align-items: center;
        justify-content: center;
        gap: 10px;
        margin-bottom: 12px;
    }

    .date {
        font-size: 12px;
        line-height: 130%;
        color: colors.$gray-60;
    }

    .amount {
        font-weight: 600;
        font-size: 24px;
        line-height: 19px;
        color: colors.$gray-90;

        sup {
            color: colors.$gray-90;
            font-weight: 400;
            font-size: 14px;
            line-height: 100%;
            margin-left: 2px;
        }
    }
}

.tx-date,
.tx-fees {
    display: flex;
    gap: 10px;
    justify-content: space-between;
    line-height: 17px;

    @include utils.typography('table/text-lg');

    .tx-info-label {
        color: colors.$gray-80;
    }

    .tx-info-value {
        color: colors.$gray-85;
    }
}

.response-card {
    @include utils.receipt-details-bg;

    padding: 20px;
    display: flex;
    flex-flow: column;

    > div {
        padding: 14px 0;
    }

    > div:first-child {
        padding-top: 0;
    }

    > div:not(:last-child, .no-border) {
        border-bottom: 1px solid #9c9fa433;
    }

    .no-border {
        border-bottom: 0;
        padding-bottom: 0;
    }

    .status {
        display: flex;
        flex-direction: column;
        gap: 8px;

        .status-text {
            font-weight: 500;
            font-size: 14px;
            line-height: 100%;
            color: colors.$gray-90;
        }
    }

    .txn-item {
        display: flex;
        flex-flow: row;
        gap: 15px;
        justify-content: space-between;
    }

    .label,
    .value {
        font-weight: 500;
        font-size: 14px;
        line-height: 100%;
        color: colors.$gray-90;
    }

    .explorer-link {
        color: colors.$sui-dark-blue;

        @include utils.typography('Primary/SubtitleSmall-M');

        a {
            text-decoration: none;
            color: colors.$sui-dark-blue;
            margin: 0;
            text-transform: uppercase;

            i {
                transform: rotate(135deg);
                font-weight: 300;
                position: absolute;
                margin-left: 5px;
                font-size: 10px;
                color: colors.$sui-steel-blue;
            }
        }
    }

    .walletaddress {
        a {
            color: colors.$sui-dark-blue;
            @include utils.typography('mono-type');
        }
    }
}

.status-icon {
    position: relative;
    height: 46px;
    width: 46px;
    display: flex;
}

.success {
    .response-card,
    .response-card::after {
        background-color: colors.$receipt-card-bg-success;
    }

    .status-icon {
        background: url('_assets/images/sucess-thumbs-up.svg') no-repeat center;
    }
}

.failed {
    .response-card,
    .response-card::after {
        background-color: colors.$error-light;
    }

    .status-icon {
        background: url('_assets/images/failure-thumbs-down.svg') no-repeat
            center;
    }
}

.wideview {
    display: flex;
    align-items: center;
    width: 100%;
    justify-content: flex-start;
    gap: 10px;
    height: 40px;

    .img {
        height: 40px;
        width: 40px;
        object-fit: cover;
        border-radius: 4px;
    }

    .nftfields {
        padding-top: 0;
        height: 49px;
        display: flex;
        flex-flow: column;
        justify-content: center;
    }

    .nft-name {
        @include utils.typography('table/text-sm');

        text-transform: capitalize;
        color: colors.$gray-90;
        line-height: 100%;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
    }

    .nft-type {
        color: colors.$gray-80;
        font-weight: 500;
        font-size: 11px;
        line-height: 100%;
    }

    .wallet-info-value {
        @include utils.typography('page-title');

        color: colors.$gray-100;
    }
}

.amount-transfered {
    display: flex;
    gap: 10px;
    justify-content: space-between;
    align-content: center;
}

